[gd_scene load_steps=6 format=3 uid="uid://cvidgpxd132mm"]

[ext_resource type="Script" path="res://幻影相机/camera_area.gd" id="1_k0mb4"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="2_fv1vr"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_i4da4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68jlk"]
size = Vector2(1480, 850)

[sub_resource type="Resource" id="Resource_eq01u"]
script = ExtResource("3_i4da4")
duration = 1.0
transition = 0
ease = 2

[node name="CameraArea2D" type="Area2D" groups=["相机框"]]
script = ExtResource("1_k0mb4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_68jlk")

[node name="PhantomCamera2D" type="Node2D" parent="."]
script = ExtResource("2_fv1vr")
follow_mode = 2
zoom = Vector2(2, 2)
tween_resource = SubResource("Resource_eq01u")
follow_damping = true
draw_limits = true
limit_target = NodePath("../CollisionShape2D")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
